// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemContainer /> education item education item 1`] = `
<div
  data-testid="sectionItemContainer"
>
  <h1
    data-testid="itemTitle"
  >
    Bachelor of Software Development
  </h1>
  <div
    data-testid="byline"
  >
    <span
      data-testid="itemSubtitle"
    >
      University
    </span>
    |
    <p
      data-testid="sectionItemDates"
    >
      2011
       - 
      2013
    </p>
  </div>
  <div
    data-testid="sectionItemDetails"
  >
    <ul>
      

      <li>
        DB1101 - Basic SQL
      </li>
      

    </ul>
  </div>
</div>
`;

exports[`<ItemContainer /> education item no courses? get nothing 1`] = `
<div
  data-testid="sectionItemContainer"
>
  <h1
    data-testid="itemTitle"
  >
    Bachelor of Software Development
  </h1>
  <div
    data-testid="byline"
  >
    <span
      data-testid="itemSubtitle"
    >
      University
    </span>
    |
    <p
      data-testid="sectionItemDates"
    >
      2011
       - 
      2013
    </p>
  </div>
</div>
`;

exports[`<ItemContainer /> experience item experience item 1`] = `
<div
  data-testid="sectionItemContainer"
>
  <h1
    data-testid="itemTitle"
  >
    President
  </h1>
  <div
    data-testid="byline"
  >
    <span
      data-testid="itemSubtitle"
    >
      Company
    </span>
    |
    <p
      data-testid="sectionItemDates"
    >
      2013
       - 
      2014
    </p>
  </div>
  <div
    data-testid="sectionItemDetails"
  >
    <p>
      Description...
    </p>
  </div>
</div>
`;
